# ros2-monorepo-boilerplate

./: .copywrite.hcl  .cspell.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  buf.yaml  dev.code-workspace  nx.json  package.json  pixi.toml  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  tsconfig.base.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.nx/: nxw.js
demo_upper/: package.json  project.json  setup-bridge.sh  tsconfig.json
demo_upper/src/: cli.ts  decode.ts  live.ts  replay.ts
devImage/.devcontainer/: Dockerfile  devcontainer.json
docs/: index.md
docs/.vitepress/: config.ts
docs/getting-started/: architecture.md  developer-onboarding.md  setup.md
docs/ros/: bridge-node.md
docs/tooling/: devcontainer-environment.md  devcontainer-layering-and-maintenance.md  documentation-format-and-site.md  nx-dependency-graph-and-cache.md  pixi-task-runner-and-python-cpp-env.md  quality-check-and-test-toolchain.md
docs/upper-computer/: overview.md
docs/workflow/: proto-and-mcap.md
proto/: buf.gen.cpp.yaml  buf.gen.ts.yaml  buf.gen.yaml  project.json
proto/bridge/: topic_message.proto
proto/foxglove/: CameraCalibration.proto  CompressedImage.proto  FrameTransform.proto  Grid.proto  LinePrimitive.proto  LocationFix.proto  LocationFixes.proto  Log.proto  ModelPrimitive.proto  PackedElementField.proto  Point3InFrame.proto  PointsAnnotation.proto  README.md  RawAudio.proto  RawImage.proto  TriangleListPrimitive.proto  VoxelGrid.proto
ros/: .clang-format  .clang-tidy  project.json
ros/src/bridge/: CMakeLists.txt  package.xml  project.json
ros/src/bridge/src/: bridge_node.cpp
ros/src/demo_bringup/: CMakeLists.txt  package.xml  project.json
ros/src/demo_bringup/launch/: demo_nodes.launch.py
ros/src/demo_cpp_node/: CMakeLists.txt  package.xml  project.json
ros/src/demo_cpp_node/include/demo_cpp_node/: message_builder.hpp
ros/src/demo_cpp_node/src/: demo_cpp_node.cpp  message_builder.cpp
ros/src/demo_cpp_node/test/: test_message_builder.cpp
ros/src/demo_py_node/: package.xml  project.json  setup.cfg  setup.py
ros/src/demo_py_node/demo_py_node/: __init__.py  demo_py_node.py
ros/src/demo_py_node/test/: test_import.py
ros/src/interfaces/: CMakeLists.txt  package.xml
ros/src/interfaces/msg/demo/: Greeting.msg
scripts/: docs.js  read-docs.js  ros_activate.sh  run-clang-tidy-filter.py
