<?xml version="1.0"?>
<package format="3">
  <name>bridge</name>
  <version>0.1.0</version>
  <description>Bridge between ROS and upper computer via Zenoh, with local MCAP recording.</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>interfaces</depend>
  <depend>mcap_vendor</depend>
  <build_depend>protobuf-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
