<?xml version="1.0"?>
<package format="3">
  <name>demo_bringup</name>
  <version>0.1.0</version>
  <description>Launch package for the cross-language ROS 2 demo nodes.</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>demo_cpp_node</exec_depend>
  <exec_depend>demo_py_node</exec_depend>
  <exec_depend>bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
