<?xml version="1.0"?>
<package format="3">
  <name>demo_cpp_node</name>
  <version>0.1.0</version>
  <description>Demo C++ ROS 2 node for bidirectional topic messaging.</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
