<?xml version="1.0"?>
<package format="3">
  <name>demo_py_node</name>
  <version>0.1.0</version>
  <description>Demo Python ROS 2 node for bidirectional topic messaging.</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>interfaces</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
